--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "redfinch",
   "version": "1.0.0",
   "description": "An open and functional library for neuro-evolution and reinforcement learning!",
-  "main": "index.js",
+  "main": "dist/redfinch.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,12 @@
   "homepage": "https://github.com/We-Gold/RedFinch#readme",
   "dependencies": {
     "@tensorflow/tfjs": "^3.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0"
   }
 }
